# intermittent-forecast

./: .gitignore  LICENSE  README.md  docs.md  pydoc-markdown-config.yml  pydoc-markdown.yaml  pyproject.toml  setup.py  test.py  tester.md
.venv38/Scripts/: activate  activate.bat
docs/: documentation.md  pydoc-markdown.yaml
docs/source/: conf.py  examples.rst  index.rst  intermittent_forecast.rst  intro.rst  modules.rst
src/intermittent_forecast/: __init__.py  adida.py  base_forecaster.py  croston.py  double_exponential_smoothing.py  error_metrics.py  exponential_smoothing.py  imapa.py  resampler.py  simple_exponential_smoothing.py  triple_exponential_smoothing.py  utils.py
src/intermittent_forecast/aggregators/: __init__.py  adida.py
src/intermittent_forecast/core/: _types.py  error_metrics.py  utils.py
src/intermittent_forecast/forecasters/: __init__.py  _base_forecaster.py  croston.py  double_exponential_smoothing.py  simple_exponential_smoothing.py  triple_exponential_smoothing.py
tests/: __init__.py  _test_intermittent_forecast.py  test_adida.py  test_croston.py  test_double_exponential_smoothing.py  test_error_metrics.py  test_exponential_smoothing.py  test_intermittent_forecast.py  test_resampler.py  test_simple_exponential_smoothing.py  test_triple_exponential_smoothing.py
tests/aggregators/: test_adida.py
tests/forecasters/: test_croston.py  test_double_exponential_smoothing.py  test_simple_exponential_smoothing.py  test_triple_exponential_smoothing.py
